src-ken&y/objects/Lot__c.object
<CustomObject>
    <customHelpPage>HelpLot</customHelpPage>
    <description>Lot information for an Item that is Lot tracked. The Lot contains the Lot attributes and is unique for the Item and Supplier.</description>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates if this Company produced or purchased this Lot. If Company is set and Supplier is null, this Company produced the Lot. Otherwise, Lot comes from the manufacturing Supplier.</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Date this Lot of this Product expires.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lot on this Item.</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_Hold_Reason__c</fullName>
        <description>Indicates the reason that this Lot is on Hold. Lots on Hold are non-nettable and are not available for fulfillment, WIP, etc. Reason code indicates why on hold.</description>
        <label>Lot Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this Lot is on hold. Lots on hold are non-nettable.</description>
        <label>Lot Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_Unique__c</fullName>
        <description>Validates that Lots are unique across Lot Number, Item, Company and Supplier. Used to lookup Lot IDs during SKID updates.</description>
        <externalId>true</externalId>
        <label>Lot Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Shelf_Life_Status__c</fullName>
        <label>Shelf Life Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saleable</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier for this Item - different suppliers can have different lot numbers and different production attributes.</description>
        <inlineHelpText>This field is optional, but recommended if multiple suppliers provide this item.</inlineHelpText>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Lot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Supplier__c</columns>
        <columns>Company__c</columns>
        <columns>Lot_Hold__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Company_or_Supplier_Only</fullName>
        <active>false</active>
        <description>(REMOVED) Either company or supplier must be filled in, but not both.</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>The lot can have either Company or Supplier at a time, but not both.</errorMessage>
    </validationRules>
</CustomObject>